Fix T82079: Missing viewport redraw changing volume slicing axis

Send appropriate notifiers (via rna_Volume_update_display).

Maniphest Tasks: T82079

Differential Revision: https://developer.blender.org/D9351